# ai-codefix-assignment-nithesh

./: Dockerfile  README.md  main.py  models.py  pyproject.toml  rag.py  requirements.txt  test_local.py
recipes/: CWE-20-Improper Input Validation.txt  CWE-22-Path Traversal.txt  CWE-287-Improper Authentication.txt  CWE-306-Missing Authentication for Critical Function.txt  CWE-352-Cross-Site Request Forgery.txt  CWE-434-Unrestricted File Upload.txt  CWE-502-Deserialization of Untrusted Data.txt  CWE-78-OS Command Injection.txt  CWE-79-Cross-Site Scripting .txt  CWE-89-SQL Injection.txt
tests/: test_api.py  test_model.py  test_rag.py
