[project]
name = "ai-codefix-assignment-nithesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.3.1",
  "fastapi>=0.121.3",
  "python-dotenv>=1.2.1",
  "torch>=2.9.1",
  "transformers>=4.57.1",
  "uvicorn>=0.38.0",
]
